1.Model trained and tflite is integrated to the project . 2.Gpt responses are finetuned according to the languages

--- a/app/src/main/res/values-ta-rIN/strings.xml
+++ b/app/src/main/res/values-ta-rIN/strings.xml
@@ -86,5 +86,6 @@
 பொது நோய்கள்: கேன் பிளைட், பவுடரி மில்டியூ, ரூட் ராட், மோசைக் வைரஸ்.&#10;
 தடுப்பு: கொடிகளை வெட்டவும், ஈரமான மண்ணை தவிர்க்கவும், நோய் எதிர்ப்பு வகைகளை பயிரிடவும்.&#10;
 கட்டுப்பாடு: பூஞ்சை மருந்துகள் தெளிக்கவும், பாதிக்கப்பட்ட கொடிகளை அகற்றவும், நீர்ப்பாய்ச்சலை சரியாக நிர்வகிக்கவும்.</string>
+    <string name="processing">கணிப்பு பொத்தானை அழுத்திய பிறகு, சில நேரம் பொறுங்கள்.</string>
 
 </resources>
